--- a/Stacks and Queues/Stack of Plates.ipynb
+++ b/Stacks and Queues/Stack of Plates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 257,
    "metadata": {
     "collapsed": false
    },
@@ -36,6 +36,9 @@
     "            \n",
     "            self.mini = mini\n",
     "        return poppy\n",
+    "    \n",
+    "    def popAt(self, index):\n",
+    "        return self.stack.pop(index)\n",
     "    \n",
     "    def push(self, item):\n",
     "        self.size += 1\n",
@@ -80,21 +83,49 @@
     "                self.stack_set[set_index].pop()\n",
     "        \n",
     "        return return_item\n",
+    "    \n",
+    "    def pop_at(self, index):\n",
+    "        return_item = None\n",
+    "        set_pop = index // self.stack_max\n",
+    "        stack_pop = index // self.stack_max\n",
+    "        \n",
+    "        if self.size > -1 and index <= self.size:\n",
+    "            self.size -= 1\n",
+    "            \n",
+    "            temp_arr = []\n",
+    "            return_item = self.stack_set[set_pop].stack.pop(stack_pop)\n",
+    "            index += 1\n",
+    "            switched = False\n",
     "\n",
+    "            for i in range(index + 1, self.size + 1):\n",
+    "                \n",
+    "                if i % self.stack_max == 0:\n",
+    "                    switched = True\n",
+    "                else:\n",
+    "                    switched = False\n",
+    "                \n",
+    "                if not switched:\n",
+    "                    temp_arr.append(self.stack_set[index//self.stack_max].stack.pop(index%self.stack_max))\n",
+    "                else:\n",
+    "                    temp_arr.append(self.stack_set[index//self.stack_max + 1].stack.pop(0))\n",
+    "            \n",
+    "            for item in temp_arr:\n",
+    "                self.push(item)\n",
+    "            \n",
+    "        return return_item\n",
+    "    \n",
     "    def debug_print(self):\n",
     "        for number in range(self.size + 1):\n",
     "\n",
     "            set_index = number // self.stack_max\n",
     "            stack_index = number % self.stack_max\n",
     "            \n",
-    "            print(self.stack_set[set_index].stack[stack_index])\n",
-    "        \n",
-    "        \n"
+    "            print(self.stack_set[set_index].stack[stack_index])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 258,
    "metadata": {
     "collapsed": false
    },
@@ -105,24 +136,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 259,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "setOfStacks.pop()"
+    "for i in range(10):\n",
+    "    setOfStacks.push(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 260,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "setOfStacks.debug_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "pop() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-261-c5126b6acbae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msetOfStacks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: pop() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "setOfStacks.pop(3)"
    ]
   },
   {
