--- a/Stacks and Queues/Stack of Plates.ipynb
+++ b/Stacks and Queues/Stack of Plates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 394,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
     "    def pop_at(self, index):\n",
     "        return_item = None\n",
     "        set_pop = index // self.stack_max\n",
-    "        stack_pop = index // self.stack_max\n",
+    "        stack_pop = index % self.stack_max\n",
     "        \n",
     "        if self.size > -1 and index <= self.size:\n",
     "            self.size -= 1\n",
@@ -97,19 +97,23 @@
     "            index += 1\n",
     "            switched = False\n",
     "\n",
-    "            for i in range(index + 1, self.size + 1):\n",
-    "                \n",
-    "                if i % self.stack_max == 0:\n",
+    "            for i in range(index + 1, self.size):\n",
+    "                set_new = i // self.stack_max                \n",
+    "\n",
+    "                if not set_pop == set_new:\n",
     "                    switched = True\n",
     "                else:\n",
     "                    switched = False\n",
+    "                    \n",
+    "                print(set_new)\n",
     "                \n",
     "                if not switched:\n",
-    "                    temp_arr.append(self.stack_set[index//self.stack_max].stack.pop(index%self.stack_max))\n",
+    "                    temp_arr.append(self.stack_set[set_new].stack.pop(stack_pop))\n",
     "                else:\n",
-    "                    temp_arr.append(self.stack_set[index//self.stack_max + 1].stack.pop(0))\n",
+    "                    temp_arr.append(self.stack_set[set_new].stack.pop(0))\n",
     "            \n",
     "            for item in temp_arr:\n",
+    "                print(item)\n",
     "                self.push(item)\n",
     "            \n",
     "        return return_item\n",
@@ -125,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 395,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 396,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 397,
    "metadata": {
     "collapsed": false
    },
@@ -176,25 +180,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 398,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "pop() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-261-c5126b6acbae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msetOfStacks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: pop() takes 1 positional argument but 2 were given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "1\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "3\n"
      ]
     }
    ],
    "source": [
-    "setOfStacks.pop(3)"
+    "print(setOfStacks.pop_at(3))"
    ]
   },
   {
