--- a/Stacks and Queues/Stack of Plates.ipynb
+++ b/Stacks and Queues/Stack of Plates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 424,
    "metadata": {
     "collapsed": false
    },
@@ -92,20 +92,20 @@
     "        if self.size > -1 and index <= self.size:\n",
     "            self.size -= 1\n",
     "            \n",
+    "            print(stack_pop)\n",
+    "            \n",
     "            temp_arr = []\n",
     "            return_item = self.stack_set[set_pop].stack.pop(stack_pop)\n",
     "            index += 1\n",
     "            switched = False\n",
     "\n",
-    "            for i in range(index + 1, self.size):\n",
+    "            for i in range(index, self.size + 2):\n",
     "                set_new = i // self.stack_max                \n",
     "\n",
     "                if not set_pop == set_new:\n",
     "                    switched = True\n",
     "                else:\n",
     "                    switched = False\n",
-    "                    \n",
-    "                print(set_new)\n",
     "                \n",
     "                if not switched:\n",
     "                    temp_arr.append(self.stack_set[set_new].stack.pop(stack_pop))\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 425,
    "metadata": {
     "collapsed": false
    },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 426,
    "metadata": {
     "collapsed": false
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 427,
    "metadata": {
     "collapsed": false
    },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 429,
    "metadata": {
     "collapsed": false
    },
@@ -189,13 +189,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "1\n",
-      "1\n",
-      "4\n",
-      "5\n",
-      "6\n",
       "3\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "pop index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-429-71d3be72c152>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msetOfStacks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop_at\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-424-29b33ad0e67d>\u001b[0m in \u001b[0;36mpop_at\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m             \u001b[0mtemp_arr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m             \u001b[0mreturn_item\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstack_set\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mset_pop\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack_pop\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m             \u001b[0mindex\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m             \u001b[0mswitched\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: pop index out of range"
      ]
     }
    ],
